Sets a few more items w/ warning theme to make sure the use appropriate contrast color values

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -305,6 +305,12 @@
 .message-warn {
   background-color: theme-color('danger');
   color: color-yiq(theme-color('danger'));
+  .bbcode {
+    .whiteText,
+    .blackText {
+      color: color-yiq(theme-color('danger'));
+    }
+  }
 }
 
 .messages {
